# spanish-subwords-evaluation

./: .dockerignore  .env.sample  .gitattributes  .pre-commit-config.yaml  Dockerfile  Dockerfile_deploy  Makefile  README.md  docker-compose.yml  old_code.py  pyproject.toml
data/: afixes.csv  clitics.csv  morph_quality.json  morph_segmentation.json
data/task2/: clitics_parte_1.json  clitics_parte_2.json
results/: task_1_results.json
src/: main.py  morphological_evaluator.py  utils.py
subword_tokenizers_31/: temp_builder.py
subword_tokenizers_31/bpe/: config.json  merges.txt  tokenizer.json  vocab.json
subword_tokenizers_31/unigram/: tokenizer.json
subword_tokenizers_31/wordpiece/: config.json  tokenizer.json  vocab.txt
subword_tokenizers_52/bpe/: merges.txt  tokenizer.json  vocab.json
subword_tokenizers_52/unigram/: config.json  special_tokens_map.json  tokenizer.json
subword_tokenizers_52/wordpiece/: config.json  tokenizer.json  vocab.txt
